# Bamium-Server

./: .gitignore  Cargo.toml  docker-compose.yml
adminpage/: Cargo.toml
api/: Cargo.toml  dockerfile
api/src/: database.rs  main.rs
api/src/api/: auth.rs  mod.rs  schema.rs
api/src/models/: channel.rs  message.rs  mod.rs  role.rs  user.rs
data/nginx/: cert.pem  default.conf  key.pem
data/redis/: dump.rdb
web/: Cargo.toml  dockerfile  readme.md
web/src/: main.rs
web/www/: index.html
webpage/: Cargo.toml
